Fix distorted send button

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -133,7 +133,7 @@
 .btn-send {
 	#berend-mixin-button-reset;
 	#berend-mixin-button-green;
-	width: 20%;
+	width: auto;
 	padding-left: @berend-text-button-padding - 5px !important;
 	margin: 0 @berend-padding-small 0 0 !important;
 
